MDEV-5822 TokuDB fails to compile without partition storage engine